--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_colorpicker: ^1.1.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
   provider: ^6.1.2
+  shared_preferences: ^2.3.3
   smooth_page_indicator: ^1.2.0+3
   table_calendar: ^3.1.2
 
