--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ^3.5.3
 
 dependencies:
+  cloud_firestore: ^5.5.0
+  firebase_core: ^3.8.0
   flutter:
     sdk: flutter
   flutter_blue_plus: ^1.33.4
